# capnproto-rust-hello-world

./: .gitignore  Cargo.toml  README.org  build.rs  flake.nix
