cargo-features = ["edition2024"]

[package]
name = "hello-world"
version = "0.0.0"
readme = "README.org"
authors = [
  "Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>",
  "Dietrich Daroch <dietrich@daroch.me>",
]
edition = "2024"
build = "build.rs"

[build-dependencies]
capnpc = { version = "*"}

[dependencies]
capnp = { version = "*" }
capnp-rpc = { version = "*" }
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros"]}
tokio-util = { version = "0.7.4", features = ["compat"] }
